--- a/index.html
+++ b/index.html
@@ -18,14 +18,20 @@
 
 <body>
     <div class="navbar">
-        <a href="map/unmined.index.html">卫星地图</a>
-        <a href="files/原点城服务器手册v1_3.pdf">服务器手册</a>
-        <a href="https://www.bilibili.com/video/BV1Z94y1i7RE">宣传片</a>
+        <div class="logo-container">
+            <img src="imgs/logo.png" alt="Logo" class="logo">
+            <span class="logo-text">原点城</span>
+        </div>
+        <ul class="nav-links">
+            <li><a href="map/unmined.index.html">卫星地图</a></li>
+            <li><a href="files/原点城服务器手册v1_3.pdf">服务器手册</a></li>
+            <li><a href="https://www.bilibili.com/video/BV1Z94y1i7RE">宣传片</a></li>
+        </ul>
     </div>
 
     <div class="main-content">
         <div class="title">永不换档的纯净生存服</div>
-        <div class="subtitle">我们是2022年2月6日开服的原点城基岩版服务器</div>
+        <div class="subtitle">从2022年维护至今的永久建筑区，不怕跑路，放心开肝！</div>
         <div class="video">
             <iframe src="https://player.bilibili.com/player.html?aid=361129687&bvid=BV1Z94y1i7RE&cid=1202318984&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="100%" height="100%"> </iframe>
         </div>
