--- a/mobile.html
+++ b/mobile.html
@@ -23,12 +23,11 @@
         </div>
         <span class="dropdown-icon" onclick="toggleMenu()">&#9776;</span>
         <div class="sidebar" id="sidebar">
-            <a href="#">卫星地图</a>
-            <a href="#">服务器手册</a>
-            <a href="#">宣传片</a>
+            <a href="map/unmined.index.html">卫星地图</a>
+            <a href="files/原点城服务器手册v1_3.pdf">服务器手册</a>
+            <a href="https://www.bilibili.com/video/BV1Z94y1i7RE">宣传片</a>
         </div>
     </div>
-
     <div class="main-content">
         <div class="title">永不换档的纯净</div>
         <div class="title">生存服</div>
