--- a/mobile.html
+++ b/mobile.html
@@ -17,25 +17,30 @@
 
 <body>
     <div class="navbar">
-        <div class="navbar-center">
-            <img src="imgs/logo.png" alt="Logo" class="logo">
-            <span class="logo-text">原点城</span>
-        </div>
-        <span class="dropdown-icon" onclick="toggleMenu()">&#9776;</span>
-        <div class="sidebar" id="sidebar">
-            <a href="map/unmined.index.html">卫星地图</a>
-            <a href="files/原点城服务器手册v1_3.pdf">服务器手册</a>
-            <a href="https://www.bilibili.com/video/BV1Z94y1i7RE">宣传片</a>
+        <div class="navbar-flex">
+            <div class="navbar-left"></div>
+            <div class="navbar-center">
+                <img src="imgs/logo.png" alt="Logo" class="logo">
+                <span class="logo-text">原点城</span>
+            </div>
+            <div class="navbar-right">
+                <a class="sidebar-icon" onclick="toggleMenu()">&#9776;</a>
+            </div>
         </div>
     </div>
-    <div class="main-content">
-        <div class="title">永不换档的纯净</div>
-        <div class="title">生存服</div>
+    <div class="navbar-bottomline"></div>
+    <div class="sidebar" id="sidebar">
+        <a href="map/unmined.index.html">卫星地图</a>
+        <a href="files/原点城服务器手册v1_3.pdf">服务器手册</a>
+        <a href="https://www.bilibili.com/video/BV1Z94y1i7RE">宣传片</a>
+    </div>
+    <div class="main">
+        <div class="title">永不换档的纯净<br>生存服</div>
         <div class="subtitle">从2022年维护至今的永久建筑区，不怕跑路，放心开肝！</div>
         <div class="video">
             <iframe width="100%" height="auto" src="https:////player.bilibili.com/player.html?aid=898701720&bvid=BV1UN4y1j7Jk&cid=781649895&p=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=FijWVpvqJV2dUD3cWMB75jsRn_e_TXrX&authKey=Jvzy6fwder1lbwaJwKIYPe4xiZdu8up07a6uIaAxGw%2BMdPcOU%2FmQR36cLUjOOl%2B9&noverify=0&group_code=671868088" class="btn">加入我们</a>
+        <a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=FijWVpvqJV2dUD3cWMB75jsRn_e_TXrX&authKey=Jvzy6fwder1lbwaJwKIYPe4xiZdu8up07a6uIaAxGw%2BMdPcOU%2FmQR36cLUjOOl%2B9&noverify=0&group_code=671868088" class="btn">加入我们</a>   
     </div>
     <div class="grass"></div>
     <div class="footer">
