--- a/mobile.html
+++ b/mobile.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Origin City Server - Mobile</title>
+    <title>原点城</title>
+    <link rel="icon" type="image/png" href="imgs/logo.png">
     <link rel="stylesheet" href="css/style-mobile.css">
     <style>
         @font-face {
@@ -38,13 +39,13 @@
         <div class="title">永不换档的纯净<br>生存服</div>
         <div class="subtitle">从2022年维护至今的永久建筑区，不怕跑路，放心开肝！</div>
         <div class="video">
-            <iframe width="100%" height="auto" src="https:////player.bilibili.com/player.html?aid=898701720&bvid=BV1UN4y1j7Jk&cid=781649895&p=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="auto" src="https://player.bilibili.com/player.html?aid=361129687&bvid=BV1Z94y1i7RE&cid=1202318984&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
         </div>
         <a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=FijWVpvqJV2dUD3cWMB75jsRn_e_TXrX&authKey=Jvzy6fwder1lbwaJwKIYPe4xiZdu8up07a6uIaAxGw%2BMdPcOU%2FmQR36cLUjOOl%2B9&noverify=0&group_code=671868088" class="btn">加入我们</a>   
     </div>
     <div class="grass"></div>
     <div class="footer">
-        Page designed by SkilfulScarab84 © 2024 OriginCity Server
+        Page designed by SkilfulScarab84 HarpGreen © 2024 OriginCity Server
     </div>
 
     <script>
