--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>原点城</title>
+    <link rel="icon" type="image/png" href="imgs/logo.png"> 
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="css/style-mobile.css" media="screen and (max-width: 600px)"> -->
     <style>
@@ -39,7 +40,7 @@
     </div>
 
     <div class="footer">
-        © 2024 OriginCity Server. All Rights Reserved.
+        Page designed by SkilfulScarab84 HarpGreen © 2024 OriginCity Server
     </div>
 
     <script>
