--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="mainbar">
         <div class="mainbar-container">
-            <div class="title">永不换档的纯净<br>生存服</div>
+            <div class="title">永不换档的纯净生存服</div>
             <div class="subtitle">从2022年维护至今的永久建筑区，不怕跑路，放心开肝！</div>
             <div class="twobutton-container">
                 <a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=FijWVpvqJV2dUD3cWMB75jsRn_e_TXrX&authKey=Jvzy6fwder1lbwaJwKIYPe4xiZdu8up07a6uIaAxGw%2BMdPcOU%2FmQR36cLUjOOl%2B9&noverify=0&group_code=671868088" class="btn">加入我们</a>
