--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="main-content">
         <div class="video">
-            <iframe src="https://player.bilibili.com/player.html?aid=1800036186&bvid=BV1nt421W7jk&cid=1428974928&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="100%" height="100%"> </iframe>
+            <iframe src="https://player.bilibili.com/player.html?aid=361129687&bvid=BV1Z94y1i7RE&cid=1202318984&p=1" allowfullscreen="allowfullscreen" width="100%" height="100%" scrolling="no" frameborder="0" sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts"></iframe>
         </div>
     </div>
 
