--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 </head>
 
 <body>
+    <script>
+        // 在这里添加 JavaScript 代码以检测设备类型并重定向到相应的页面
+        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+            window.location.href = "mobile.html"; // 如果是手机设备，重定向到手机页面
+        }
+    </script>
     <div class="sidebar">
         <div class="logo-container">
             <img src="imgs/logo.png" alt="Logo" class="logo">
@@ -38,7 +44,7 @@
                 <div class="scroll-item active" style="background-image: url('scrollbox/中心岛广场.jpg');">
                     <p class="scroll-text">中心岛广场</p>
                 </div>
-                <div class="scroll-item" style="background-image: url('scrollbox/菠萝地瓜广场.png');">
+                <div class="scroll-item" style="background-image: url('scrollbox/菠萝地瓜广场2.jpg');">
                     <p class="scroll-text">菠萝地瓜</p>
                 </div>
                 <div class="scroll-item" style="background-image: url('scrollbox/雨菇教堂.jpg');">
@@ -73,12 +79,6 @@
             currentItem = (currentItem + 1) % items.length;
             items[currentItem].classList.add('active');
         }, 5000); // x秒切换一次
-    </script>
-    <script>
-        // 在这里添加 JavaScript 代码以检测设备类型并重定向到相应的页面
-        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
-            window.location.href = "mobile.html"; // 如果是手机设备，重定向到手机页面
-        }
     </script>
 </body>
 
