--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
     </div>
     <div class="main-content">
         <div class="video">
-            <iframe src="https://player.bilibili.com/player.html?aid=1354173973&bvid=BV1Tz421S7cs&cid=1534395146&p=1" allowfullscreen="allowfullscreen" width="100%" height="100%" scrolling="no" frameborder="0" sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts"></iframe>
+            <iframe src="https://player.bilibili.com/player.html?isOutside=true&aid=112942590725479&bvid=BV1edYDeVE3E&cid=500001645799655&p=1" allowfullscreen="allowfullscreen" width="100%" height="100%" scrolling="no" frameborder="0" sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts"></iframe>
         </div>
     </div>
-
     <div class="mapbar">
         <div class="map-container">
             <div class="map-title">卫星地图</div>
