--- a/mobile.html
+++ b/mobile.html
@@ -39,7 +39,7 @@
         <div class="title">永不换档的纯净<br>生存服</div>
         <div class="subtitle">从2022年维护至今的永久建筑区，不怕跑路，放心开肝！</div>
         <div class="video">
-            <iframe src="https://player.bilibili.com/player.html?isOutside=true&aid=112942590725479&bvid=BV1edYDeVE3E&cid=500001645799655&p=1" allowfullscreen="allowfullscreen" width="100%" height="100%" scrolling="no" frameborder="0" sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts"></iframe>
+            <iframe src="https://player.bilibili.com/player.html?isOutside=true&aid=113753836229841&bvid=BV1TF6fYJEnm&cid=27650754635&p=1" allowfullscreen="allowfullscreen" width="100%" height="100%" scrolling="no" frameborder="0" sandbox="allow-top-navigation allow-same-origin allow-forms allow-scripts"></iframe>
         </div>
         <a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=FijWVpvqJV2dUD3cWMB75jsRn_e_TXrX&authKey=Jvzy6fwder1lbwaJwKIYPe4xiZdu8up07a6uIaAxGw%2BMdPcOU%2FmQR36cLUjOOl%2B9&noverify=0&group_code=671868088" class="btn">加入我们</a>   
     </div>
